--- a/FrameGrabber/FrameGrabber/FrameGrabber.vcxproj
+++ b/FrameGrabber/FrameGrabber/FrameGrabber.vcxproj
@@ -140,6 +140,10 @@
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="HeaderFiles\cvui.h" />
+    <ClInclude Include="HeaderFiles\EnhancedWindow.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
