Added helpers for strings

--- a/FrameGrabber/FrameGrabber/FrameGrabber.vcxproj.filters
+++ b/FrameGrabber/FrameGrabber/FrameGrabber.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="HeaderFiles\EnhancedWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="StringHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
