--- a/FrameGrabber/FrameGrabber/FrameGrabber.vcxproj
+++ b/FrameGrabber/FrameGrabber/FrameGrabber.vcxproj
@@ -143,6 +143,7 @@
   <ItemGroup>
     <ClInclude Include="HeaderFiles\cvui.h" />
     <ClInclude Include="HeaderFiles\EnhancedWindow.h" />
+    <ClInclude Include="StringHelper.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
