--- a/FrameGrabber/FrameGrabber/FrameGrabber.vcxproj.filters
+++ b/FrameGrabber/FrameGrabber/FrameGrabber.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="StringHelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="HeaderFiles\Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
