Moved keyboard functions and some globals to separate files, refactor the code in Source.cpp

--- a/FrameGrabber/FrameGrabber/FrameGrabber.vcxproj.filters
+++ b/FrameGrabber/FrameGrabber/FrameGrabber.vcxproj.filters
@@ -32,5 +32,11 @@
     <ClInclude Include="HeaderFiles\Player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="HeaderFiles\Keyboard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HeaderFiles\Modes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
