--- a/FrameGrabber/FrameGrabber/FrameGrabber.vcxproj
+++ b/FrameGrabber/FrameGrabber/FrameGrabber.vcxproj
@@ -143,6 +143,8 @@
   <ItemGroup>
     <ClInclude Include="HeaderFiles\cvui.h" />
     <ClInclude Include="HeaderFiles\EnhancedWindow.h" />
+    <ClInclude Include="HeaderFiles\Keyboard.h" />
+    <ClInclude Include="HeaderFiles\Modes.h" />
     <ClInclude Include="HeaderFiles\Player.h" />
     <ClInclude Include="StringHelper.h" />
   </ItemGroup>
